# project-help

./: README.md  pyproject.toml
notebook/hersey/intro-to-machine-learning/: exercise-explore-your-data.ipynb  exercise-machine-learning-competitions.ipynb  exercise-model-validation.ipynb  exercise-random-forests.ipynb  exercise-underfitting-and-overfitting.ipynb  exercise-your-first-machine-learning-model.ipynb
notebook/hersey/intro-to-programming/: exercise-arithmetic-and-variables.ipynb  exercise-conditions-and-conditional-statements.ipynb  exercise-data-types.ipynb  exercise-functions.ipynb  exercise-intro-to-lists.ipynb
notebook/hersey/python/: exercise-booleans-and-conditionals.ipynb  exercise-functions-and-getting-help.ipynb  exercise-lists.ipynb  exercise-loops-and-list-comprehensions.ipynb  exercise-strings-and-dictionaries.ipynb  exercise-syntax-variables-and-numbers.ipynb  exercise-working-with-external-libraries.ipynb
